disable xqsuite test; it’s a dummy & fails in CI
problem reported at https://github.com/eXist-db/generator-exist/issues/649

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "license": "AGPL-3.0",
   "scripts": {
-    "test": "mocha test/mocha/ --recursive --exit && mocha test/xqs/*.js",
+    "test": "mocha test/mocha/ --recursive --exit",
     "cypress": "cypress run"
   },
   "repository": {
