--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "license": "AGPL-3.0",
   "scripts": {
-    "test": "mocha test/mocha/ --recursive --exit",
-    "cypress": "cypress run"
+    "test": "mocha test/mocha/ --recursive --exit"
   },
   "repository": {
     "type": "git",
