--- a/.github/workflows/exist.yml
+++ b/.github/workflows/exist.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Run Unit Tests     
         run: npm test
 
-      - name: Run Integration Tests  
-        run: npm run cypress
+      # - name: Run Integration Tests  
+      #   run: npm run cypress
         
   # TODO: Add upload to dockerhub   
   # release:
