--- a/.github/workflows/exist.yml
+++ b/.github/workflows/exist.yml
@@ -13,7 +13,7 @@ jobs:
        matrix:
          exist-version: [latest, release]
          java-version: [8]
-         node-version: [12.x, 14.x]
+         node-version: [18]
     # TODO: see #563 could still be usefull for gulp builds 
     # services:
     #   # Label used to access the service container
@@ -48,7 +48,7 @@ jobs:
 
       # Build Frontend
       - name: Build Frontend Using Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
